--- a/index.html
+++ b/index.html
@@ -1,13 +1,114 @@
-<!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">سياسة الخصوصية</font></font></title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-    <strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">سياسة الخصوصية</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">تنطبق سياسة الخصوصية هذه على تطبيق rahadlivary (يُشار إليه فيما يلي باسم "التطبيق") للأجهزة المحمولة، والذي أنشأه أحمد (يُشار إليه فيما يلي باسم "مُقدّم الخدمة") كخدمة تجارية. هذه الخدمة مُخصصة للاستخدام "كما هي".</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">جمع المعلومات واستخدامها</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يجمع التطبيق معلومات عند تنزيله واستخدامه. قد تتضمن هذه المعلومات معلومات مثل:</font></font></p><ul><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">عنوان بروتوكول الإنترنت الخاص بجهازك (على سبيل المثال عنوان IP)</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">صفحات التطبيق التي تزورها، ووقت وتاريخ زيارتك، والوقت الذي تقضيه في تلك الصفحات</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">الوقت المستغرق في التطبيق</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">نظام التشغيل الذي تستخدمه على جهازك المحمول</font></font></li></ul><p></p><br><p style="display: none;"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">لا يقوم التطبيق بجمع معلومات دقيقة حول موقع جهازك المحمول.</font></font></p><div style=""><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يقوم التطبيق بجمع موقع جهازك، مما يساعد مزود الخدمة على تحديد موقعك الجغرافي التقريبي والاستفادة منه بالطرق التالية:</font></font></p><ul><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">خدمات تحديد الموقع الجغرافي: يستخدم مزود الخدمة بيانات الموقع لتوفير ميزات مثل المحتوى المخصص والتوصيات ذات الصلة والخدمات القائمة على الموقع.</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">التحليلات والتحسينات: تساعد بيانات الموقع المجمعة والمجهولة المصدر مزود الخدمة على تحليل سلوك المستخدم وتحديد الاتجاهات وتحسين الأداء العام ووظائف التطبيق.</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">خدمات الجهات الخارجية: قد يُرسل مُزوّد ​​الخدمة بيانات موقع مجهولة المصدر إلى خدمات خارجية بشكل دوري. تُساعد هذه الخدمات في تحسين التطبيق وتحسين عروضه.</font></font></li></ul></div><br><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يجوز لمزود الخدمة استخدام المعلومات التي قدمتها للاتصال بك من وقت لآخر لتزويدك بالمعلومات الهامة والإشعارات المطلوبة والعروض الترويجية التسويقية.</font></font></p><br><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">لضمان تجربة أفضل، قد يطلب منك مزود الخدمة تزويدنا بمعلومات تعريف شخصية معينة أثناء استخدام التطبيق، بما في ذلك على سبيل المثال لا الحصر: رقم الهاتف، والموقع، والاسم. سيحتفظ مزود الخدمة بالمعلومات التي يطلبها ويستخدمها وفقًا لما هو موضح في سياسة الخصوصية هذه.</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">وصول الطرف الثالث</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يتم إرسال البيانات المجمعة والمجهولة المصدر فقط دوريًا إلى الخدمات الخارجية لمساعدة مزود الخدمة على تحسين التطبيق وخدماته. ويجوز لمزود الخدمة مشاركة معلوماتك مع جهات خارجية بالطرق الموضحة في بيان الخصوصية هذا.</font></font></p><div><br><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يرجى العلم أن التطبيق يستخدم خدمات خارجية لديها سياسة خصوصية خاصة بها تتعلق بمعالجة البيانات. تجدون أدناه روابط لسياسة الخصوصية الخاصة بمقدمي الخدمات الخارجية الذين يستخدمهم التطبيق:</font></font></p><ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">خدمات جوجل بلاي</font></font></a></li></ul></div><br><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يجوز لمزود الخدمة الكشف عن المعلومات المقدمة للمستخدم والتي تم جمعها تلقائيًا:</font></font></p><ul><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">حسبما يقتضيه القانون، مثل الامتثال لاستدعاء قضائي، أو عملية قانونية مماثلة؛</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">عندما يعتقدون بحسن نية أن الإفصاح ضروري لحماية حقوقهم، أو حماية سلامتك أو سلامة الآخرين، أو التحقيق في الاحتيال، أو الاستجابة لطلب حكومي؛</font></font></li><li><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">مع مقدمي الخدمات الموثوق بهم الذين يعملون نيابة عنهم، ليس لديهم استخدام مستقل للمعلومات التي نكشفها لهم، وقد وافقوا على الالتزام بالقواعد المنصوص عليها في بيان الخصوصية هذا.</font></font></li></ul><p></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">حقوق الانسحاب</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يمكنك إيقاف جمع المعلومات من خلال التطبيق بسهولة عن طريق إلغاء تثبيته. يمكنك استخدام إجراءات إلغاء التثبيت القياسية المتوفرة على جهازك المحمول أو عبر سوق تطبيقات الهاتف المحمول أو الشبكة.</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">سياسة الاحتفاظ بالبيانات</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">سيحتفظ مزوّد الخدمة ببيانات المستخدم طوال فترة استخدامك للتطبيق ولمدة معقولة بعد ذلك. إذا كنت ترغب في حذف بيانات المستخدم التي قدمتها عبر التطبيق، يُرجى التواصل معه عبر البريد الإلكتروني ahmedengnerr@gmail.com وسيرد عليك خلال فترة معقولة.</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">أطفال</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">لا يستخدم مزود الخدمة التطبيق لطلب البيانات عن علم من الأطفال الذين تقل أعمارهم عن 13 عامًا أو التسويق لهم.</font></font></p><div><br><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">لا يستهدف التطبيق أي شخص دون سن الثالثة عشرة. ولا يجمع مزود الخدمة معلومات شخصية عن الأطفال دون سن الثالثة عشرة عمدًا. في حال اكتشف مزود الخدمة أن طفلًا دون سن الثالثة عشرة قد قدّم معلومات شخصية، فسيحذفها فورًا من خوادمه. إذا كنتَ ولي أمر أو وصيًا وعلمتَ أن طفلك قد قدّم لنا معلومات شخصية، يُرجى التواصل مع مزود الخدمة (ahmedengnerr@gmail.com) لاتخاذ الإجراءات اللازمة.</font></font></p></div><!----><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">حماية</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">يولي مزود الخدمة اهتمامًا بالغًا بحماية سرية معلوماتك. ويوفر ضمانات مادية وإلكترونية وإجرائية لحماية المعلومات التي يعالجها ويحتفظ بها.</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">التغييرات</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">قد تُحدَّث سياسة الخصوصية هذه من وقت لآخر لأي سبب. سيُخطرك مُقدِّم الخدمة بأي تغييرات تطرأ على سياسة الخصوصية من خلال تحديث هذه الصفحة بسياسة الخصوصية الجديدة. ننصحك بالاطلاع على سياسة الخصوصية هذه بانتظام للاطلاع على أي تغييرات، حيث يُعدّ الاستمرار في استخدامها موافقةً على جميع التغييرات.</font></font></p><br><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">سياسة الخصوصية هذه سارية اعتبارًا من 2025-09-23</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">موافقتك</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">من خلال استخدام التطبيق، فإنك توافق على معالجة معلوماتك على النحو المنصوص عليه في سياسة الخصوصية هذه الآن وكما تم تعديلها من قبلنا.</font></font></p><br><strong><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">اتصل بنا</font></font></strong><p><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">إذا كانت لديك أي أسئلة بخصوص الخصوصية أثناء استخدام التطبيق، أو لديك أسئلة حول الممارسات، يرجى الاتصال بمقدم الخدمة عبر البريد الإلكتروني على ahmedengnerr@gmail.com.</font></font></p><hr>
-    </body>
-    </html>
-      
+<!doctype html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>سياسة الخصوصية — راحه للتوصيل / Rahad Delivery</title>
+  <style>
+    :root{--bg:#f8fafc;--card:#ffffff;--accent:#0b74da;--muted:#6b7280}
+    body{font-family:Tahoma, Arial, Helvetica, sans-serif;background:var(--bg);margin:0;padding:24px;color:#0f172a}
+    .container{max-width:900px;margin:0 auto}
+    header{display:flex;align-items:center;gap:16px}
+    .logo{width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,#06b6d4,#0ea5a3);display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
+    h1{margin:8px 0 6px;font-size:20px}
+    p.lead{margin:0;color:var(--muted)}
+    .card{background:var(--card);padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(2,6,23,0.06);margin-top:18px}
+    h2{margin-top:18px}
+    ul{padding-inline-start:18px}
+    .meta{font-size:13px;color:var(--muted)}
+    footer{margin-top:18px;font-size:13px;color:var(--muted)}
+    .en{direction:ltr;text-align:left;border-top:1px dashed #e6eef8;margin-top:18px;padding-top:12px}
+    a.link{color:var(--accent);text-decoration:none}
+    pre{white-space:pre-wrap;word-break:break-word;background:#f1f5f9;padding:12px;border-radius:8px}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <div class="logo">R</div>
+      <div>
+        <h1>سياسة الخصوصية — راحه للتوصيل</h1>
+        <p class="lead">Rahad Delivery — سياسة الخصوصية لتطبيق توصيل الطلبات</p>
+        <div class="meta">تاريخ السريان: <strong>2026-09-23</strong></div>
+      </div>
+    </header>
+
+    <article class="card">
+      <h2>مقدمة</h2>
+      <p>تطبيق <strong>راحه للتوصيل</strong> (بالإنجليزية: <strong>Rahad Delivery</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة أحمد عبد القوي ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
+
+      <h2>1. جمع المعلومات واستخدامها</h2>
+      <p>يجمع التطبيق بيانات معينة عند تنزيله واستخدامه، ومنها:</p>
+      <ul>
+        <li>عنوان بروتوكول الإنترنت (IP).</li>
+        <li>الصفحات والوظائف التي تستخدمها داخل التطبيق، ووقت وتاريخ الزيارة.</li>
+        <li>نظام التشغيل ونوع الجهاز.</li>
+        <li>بيانات الموقع الجغرافي (GPS أو الشبكات) لتفعيل ميزات التتبع والتوصيل.</li>
+        <li>بيانات تعريف شخصية تُزوَّد طواعية مثل الاسم، رقم الهاتف، العنوان لإتمام الطلبات.</li>
+      </ul>
+
+      <h2>2. استخدام المعلومات</h2>
+      <ul>
+        <li>تشغيل الخدمات وتمكين إنشاء وتتبع الطلبات.</li>
+        <li>تخصيص المحتوى وتقديم عروض مناسبة لموقعك واهتماماتك.</li>
+        <li>التحليلات المبنية على بيانات مجهولة المصدر لتحسين أداء التطبيق.</li>
+        <li>أغراض الأمان والكشف عن الاحتيال وحماية الحسابات.</li>
+      </ul>
+
+      <h2>3. مشاركة البيانات مع جهات خارجية</h2>
+      <p>قد نشارك بياناتك مع: مزوّدي خدمات الطرف الثالث (مثل خدمات تشغيل التطبيقات والتحليلات)، شركاء التوصيل والمطاعم لإتمام الطلبات، والجهات القانونية عند الاقتضاء. نحرص أن يلتزم مقدمو الخدمات وباقي الشركاء بمعايير أمان وخصوصية مناسبة.</p>
+
+      <h2>4. ملفات تعريف الارتباط والتقنيات المماثلة</h2>
+      <p>قد يستخدم التطبيق أو مزودو الطرف الثالث ملفات تعريف الارتباط (Cookies) وتقنيات مشابهة لتخزين تفضيلات المستخدم وتحسين تجربة الاستخدام. يمكنك إدارة إعدادات ملفات تعريف الارتباط من جهازك.</p>
+
+      <h2>5. حقوق المستخدم</h2>
+      <p>لديك الحقوق التالية بخصوص بياناتك:</p>
+      <ul>
+        <li>طلب نسخة من بياناتك المخزنة لدينا.</li>
+        <li>تصحيح أو تحديث بياناتك الشخصية.</li>
+        <li>طلب حذف بياناتك.</li>
+        <li>إيقاف تلقي الرسائل الترويجية عبر إعدادات التطبيق أو بالاتصال بنا.</li>
+      </ul>
+
+      <h2>6. سياسة الاحتفاظ بالبيانات</h2>
+      <p>نحتفظ بالبيانات طوال فترة استخدامك للتطبيق وللمدة المعقولة اللازمة بعد ذلك لتحقيق الأغراض المشروعة أو للامتثال للقوانين. إذا رغبت في حذف بياناتك مبكرًا، تواصل معنا عبر البريد الإلكتروني أدناه.</p>
+
+      <h2>7. الأطفال</h2>
+      <p>لا يستهدف التطبيق الأطفال دون سن 13 عامًا ولا يجمع بياناتهم عمدًا. إذا علمنا أن طفلاً دون السن القانوني قدم بيانات شخصية، سنقوم بحذفها فورًا بعد التحقق.</p>
+
+      <h2>8. الأمان</h2>
+      <p>نطبق تدابير تقنية وتنظيمية لحماية بياناتك مثل التشفير، التحكم بالوصول، وإجراءات داخلية للحد من الوصول غير المصرح به. ومع ذلك، لا يمكن ضمان الأمان بنسبة 100% في جميع الظروف.</p>
+
+      <h2>9. التغييرات على سياسة الخصوصية</h2>
+      <p>قد تُحدَّث هذه السياسة من وقت لآخر. في حال تغيير أي سياسات جوهرية سنعلم المستخدمين عبر التطبيق أو البريد الإلكتروني. استمرار استخدامك للتطبيق بعد التحديث يعني موافقتك على الإصدارات الجديدة.</p>
+
+      <h2>10. الاتصال بنا</h2>
+      <p>للاستفسارات أو طلبات الوصول/الحذف أو أي استفسار بخصوص البيانات، الرجاء التواصل عبر البريد الإلكتروني:</p>
+      <pre>ahmedengnerr@gmail.com</pre>
+
+      <footer>
+        <p class="meta">سياسة الخصوصية هذه سارية اعتبارًا من <strong>2026-09-23</strong>.</p>
+      </footer>
+
+      <section class="en">
+        <h2>Privacy Policy — Rahad Delivery (English summary)</h2>
+        <p><strong>Rahad Delivery</strong> is a delivery app for orders (food, products, supplies) developed by Ahmed. By using the app you agree to this privacy policy.</p>
+        <h3>Data Collected</h3>
+        <ul>
+          <li>IP address, app pages visited and timestamps, OS and device type, location data, and user-provided personal details (name, phone, address) for order fulfillment.</li>
+        </ul>
+        <h3>How We Use Data</h3>
+        <ul>
+          <li>Provide and operate services, personalize content, improve app performance via analytics, and protect against fraud and abuse.</li>
+        </ul>
+        <h3>Sharing</h3>
+        <p>We may share data with third-party service providers, delivery partners and restaurants to fulfill orders, and legal authorities if required.</p>
+        <h3>User Rights</h3>
+        <p>Users can request access, correction, deletion of their data, and opt out of marketing communications.</p>
+        <p>Contact: <a class="link" href="mailto:ahmedengnerr@gmail.com">ahmedengnerr@gmail.com</a></p>
+      </section>
+
+    </article>
+  </div>
+</body>
+</html>
