--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <article class="card">
       <h2>مقدمة</h2>
-      <p>تطبيق <strong>راحه للتوصيل</strong> (بالإنجليزية: <strong>Rahad Delivery</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة أحمد عبد القوي ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
+      <p>تطبيق <strong>راحه للتوصيل</strong> (بالإنجليزية: <strong>Rahad Delivery</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة ahmedengnerr@gmail.com ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
 
       <h2>1. جمع المعلومات واستخدامها</h2>
       <p>يجمع التطبيق بيانات معينة عند تنزيله واستخدامه، ومنها:</p>
